--- a/style.css
+++ b/style.css
@@ -118,3 +118,12 @@ body{
     font-size: 32px;
     color: var(--branco-principal);
 }
+
+.rodape{
+   
+}
+
+.rodape__lista{
+    display: flex;
+    font-size: 16px;
+}
