conclui medias queries

--- a/style.css
+++ b/style.css
@@ -160,4 +160,35 @@ body{
         display: block;
         background-image: none;
     }
+
+    .container__imagem{
+        width: 50vw;
+    }
+
+    .container__caixa {
+        margin: 2em 2em;
+    }
+
+    .secundario{
+        margin: 0;
+        text-align: center;
+    }
+
+    .secundario__imagem{
+        width: 50vw;
+    }
+
+    .dispositivos__lista{
+        display: block;
+    }
+
+    .rodape__lista{
+        display: block;
+    }
+
+    .rodape__texto{
+        width: 95vw;
+    }
+    
+
 }
